add "thinking..." while waiting to AI response, add textview styles, increase text size, clear edittext on prompt button clicked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="tv_a">AI:</string>
     <string name="button_prompt">Prompt</string>
     <string name="elipsis">…</string>
+    <string name="response_thinking">Thinking…</string>
 
 </resources>
