ad google admob stuff, rename themes to GPT3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="elipsis">…</string>
     <string name="response_thinking">Thinking…</string>
 
+    <string name="admob_sample_id">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="admob_test_id">ca-app-pub-3940256099942544~3347511713</string>
+
 </resources>
