require user to agree to openai's terms of use and privacy policy before using app, git.ignore build folder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,13 @@
     <!-- Strings used for fragments for navigation -->
     <string name="chat_fragment_label">ChatGPT3</string>
     <string name="second_fragment_label">Second Fragment</string>
+    <string name="terms_agreement">Terms and Privacy Agreement</string>
+    <string name="privacy_agreement_message">This app does not store any of your personal information, nor does it share any personally identifiable information with any third parties.
+        \n\nHowever, all the content you enter in prompts are necessarily sent to OpenAI for processing by their ChatGPT3 model.
+        \n\nTo use this app you are required to accept OpenAI\'s terms of use and privacy policy.
+        \n\nFor more information see: </string>
+    <string name="exit">Exit</string>
+    <string name="accept">Accept</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="prompt">prompt</string>
@@ -15,7 +22,10 @@
     <string name="elipsis">…</string>
     <string name="response_thinking">Thinking…</string>
 
+    <!-- DO NOT translate -->
     <string name="admob_sample_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="admob_test_id">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="openai_link_terms_of_use">https://openai.com/terms/</string>
+    <string name="openai_link_privacy_policy">https://openai.com/privacy/</string>
 
 </resources>
