--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,9 @@
     <string name="elipsis">…</string>
     <string name="response_thinking">Thinking…</string>
     <string name="toast_enter_prompt">First, enter a prompt.</string>
-    <string name="toast_prompt_truncated">Maximum prompt length reached: settings->subscribe to enable longer prompts.</string>
-    <string name="toast_response_truncated">Response truncated: settings->subscribe to enable longer responses.</string>
+    <string name="toast_prompt_truncated">Maximum prompt length reached: Settings->Subscribe to enable longer prompts.</string>
+    <string name="append_response_truncated">***OpenAI\'s response is longer than allowed in the free version.
+        \nPlease go to Settings->Subscribe to remove all prompt and response limits, and to remove all ads.</string>
 
     <!-- Settings Preferences -->
     <string name="title_activity_settings">Settings</string>
@@ -36,6 +37,7 @@
     <string name="privacy_policy_title"><a href="https://openai.com/privacy/">Privacy Policy</a></string>
     <string name="show_terms_agreement_prompt">Show terms agreement prompt at startup</string>
     <string name="toast_billing_error">Billing error. Please enable Google Play billing and retry.</string>
+    <string name="toast_device_no_subscriptions">Sorry, your device does not support subscriptions.</string>
 
     <!-- DO NOT translate -->
     <string name="admob_app_id">ca-app-pub-9043912704472803~9575294075</string>
@@ -43,6 +45,5 @@
     <string name="admob_chat_interstitial_ad_unit_id">ca-app-pub-9043912704472803/6286785755</string>
     <string name="openai_link_terms_of_use">https://openai.com/terms/</string>
     <string name="openai_link_privacy_policy">https://openai.com/privacy/</string>
-    <string name="toast_device_no_subscriptions">Sorry, your device does not support subscriptions.</string>
 
 </resources>
