--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,11 @@
     <!-- Settings Preferences -->
     <string name="title_activity_settings">Settings</string>
     <string name="upgrade">Upgrade</string>
-    <string name="remove_limits_ads">Remove all prompt and response limits, and remove all ads: coming soon!</string>
+    <string name="remove_limits_ads">Remove all prompt and response limits, and remove all ads!</string>
     <string name="subscribe">Subscribe</string>
+    <string name="testing_warning">***WARNING: subscription is in early development. By subscribing,
+        you have agreed to contribute to testing the feature, which may not result in immediate removal
+        of limits or ads. Please notify me of any such issues, so I can fix it asap.</string>
     <string name="terms_header">OpenAI\'s Terms Agreement</string>
     <string name="you_agree_to_terms">By using this app, you have agreed to the following terms:</string>
     <string name="terms_of_use_title"><a href="https://openai.com/terms/">Terms of Use</a></string>
