--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,18 +29,20 @@
     <!-- Settings Preferences -->
     <string name="title_activity_settings">Settings</string>
     <string name="upgrade">Upgrade</string>
-    <string name="remove_limits_ads">Remove all prompt and response limits, and remove all ads: coming soon!</string>
+    <string name="remove_limits_ads">Remove all prompt and response limits, and remove all ads!</string>
     <string name="subscribe">Subscribe</string>
-    <string name="apply_early_access">To gain early access to subscription and test new features and releases, apply as a tester:</string>
-    <string name="join_testers">Join Test Group</string>
+    <string name="testing_warning">***WARNING: subscription is in early development. By subscribing,
+        you have agreed to contribute to testing the feature, which may not result in immediate removal
+        of limits or ads. Please notify me of any such issues, so I can fix it asap.</string>
     <string name="require_gmail">***Gmail address required to join test Android ChatGPT3 group.***</string>
     <string name="terms_header">OpenAI\'s Terms Agreement</string>
     <string name="you_agree_to_terms">By using this app, you have agreed to the following terms:</string>
     <string name="terms_of_use_title"><a href="https://openai.com/terms/">Terms of Use</a></string>
     <string name="privacy_policy_title"><a href="https://openai.com/privacy/">Privacy Policy</a></string>
     <string name="show_terms_agreement_prompt">Show terms agreement prompt at startup</string>
-    <string name="toast_billing_error">Billing error. Please enable Google Play billing and retry.</string>
     <string name="toast_device_no_subscriptions">Sorry, your device does not support subscriptions.</string>
+    <string name="toast_problem_loading_subscription_details">Problem loading subscription details.</string>
+    <string name="toast_problem_connecting_billing">Problem connecting to Google billing.</string>
 
     <!-- DO NOT translate -->
     <string name="admob_app_id">ca-app-pub-9043912704472803~9575294075</string>
