--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -57,5 +57,8 @@
     <string name="toast_problem_loading_subscription_details">Problem connecting to Google billing.</string>
     <string name="html_terms_of_use"><a href="https://openai.com/terms/">Términos de Uso</a></string>
     <string name="html_privacy_policy"><a href="https://openai.com/privacy/">Política de Privacidad</a></string>
+    <string name="login">Acceso</string>
+    <string name="login_to_enable_features">Inicie sesión para aumentar los límites de solicitud y
+        respuesta y habilitar otras funciones.</string>
 
 </resources>
