--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -60,5 +60,8 @@
     <string name="toast_problem_loading_subscription_details">Problem connecting to Google billing.</string>
     <string name="html_terms_of_use"><a href="https://openai.com/terms/">Termes d\'utilisation</a></string>
     <string name="html_privacy_policy"><a href="https://openai.com/privacy/">Politique de confidentialité</a></string>
+    <string name="login">Connexion</string>
+    <string name="login_to_enable_features">Connectez-vous pour augmenter les limites d\'invites et
+        de réponses et activer d\'autres fonctionnalités.</string>
 
 </resources>
