--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="toast_problem_loading_subscription_details">Problem connecting to Google billing.</string>
     <string name="html_terms_of_use"><a href="https://openai.com/terms/">Terms of Use</a></string>
     <string name="html_privacy_policy"><a href="https://openai.com/privacy/">Privacy Policy</a></string>
+    <string name="login">Login</string>
+    <string name="login_to_enable_features">Login to increase prompt and response limits and enable other features.</string>
 
 </resources>
